# beetr

./: .gitmodules  CMakeLists.txt
src/: main.cpp  network.cpp  network.h
src/client/: Client.cpp  Client.h
src/server/: Server.cpp  Server.h
